--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "dotenv": "^8.0.0",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-dotenv": "^0.2.0",
+    "react-native-gesture-handler": "^1.2.2",
     "react-native-maps": "^0.24.2",
     "react-native-prompt-android": "^0.3.5",
+    "react-native-swipeable": "^0.6.0",
+    "react-navigation": "^3.11.0",
     "scaledrone-react-native": "^1.5.0"
   },
   "devDependencies": {
